--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-papQ9U+G7wFQkF3rFZGgqRvj5Sx6Fh+N1eV6tT+pT9s5tnpCz6kNzC0xwTj74iMJ8j+OT7rJo2Nlnk4mC9+pQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Digital Product Builder</title>
 </head>
 <body>
