--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
-    <!-- Font Awesome для иконок -->
+    <meta name="description" content="Digital Product Builder - создание ботов Telegram, монтаж видео на заказ, программирование и разработка digital-продуктов. Оксиол (oksyol) - профессиональные услуги.">
+    <meta name="keywords" content="оксиол, oksyol, монтаж на заказ, программирование, боты телеграм, создать бота телеграм, digital продукт, разработка ботов, монтаж видео, телеграм боты">
+    <meta name="author" content="Оксиол">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
       integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
       crossorigin="anonymous" referrerpolicy="no-referrer" />
